:sparkles: find-kth-largest-xor-coordinate-value

--- a/README.adoc
+++ b/README.adoc
@@ -98,6 +98,7 @@ a|
 * link:{package}/CapacityToShipPackagesWithInDDays.java[capacity-to-ship-packages-within-d-days]
 * link:{package}/MinimumNumberOfDaysToMakeMBouquets.java[minimum-number-of-days-to-make-m-bouquets]
 * link:{package}/CountTripletsThatCanFormTwoArraysOfEqualXor.java[count-triplets-that-can-form-two-arrays-of-equal-xor]
+* link:{package}/FindKthLargestXorCoordinateValue.java[find-kth-largest-xor-coordinate-value]
 a|
 * link:{package}/MedianOfTwoSortedArrays.java[median-of-two-sorted-arrays]
 * link:{package}/BestTimeToBuyAndSellStockIII.java[best-time-to-buy-and-sell-stock-iii]
