--- a/README.adoc
+++ b/README.adoc
@@ -209,6 +209,7 @@ a|
 * link:{package}/CountTripletsThatCanFormTwoArraysOfEqualXor.java[count-triplets-that-can-form-two-arrays-of-equal-xor]
 a|
 * link:{package}/BasicCalculator.java[basic-calculator]
+* link:{package}/ChalkboardXORGame.java[chalkboard-xor-game]
 
 | BitManipulation
 a|
