--- a/README.adoc
+++ b/README.adoc
@@ -424,6 +424,7 @@ a|
 * link:{package}/PaintHouseIII.java[paint-house-iii]
 * link:{package}/NumberOfWaysToStayInTheSamePlaceAfterSomeSteps.java[number-of-ways-to-stay-in-the-same-place-after-some-steps]
 * link:{package}/StrangePrinter.java[strange-printer]
+* link:{package}/MakeTheXorOfAllSegmentsEqualToZero.java[make-the-xor-of-all-segments-equal-to-zero]
 
 | Greedy
 a|
