--- a/README.adoc
+++ b/README.adoc
@@ -255,6 +255,7 @@ a|
 * link:{package}/VerifyPreorderSerializationOfABinaryTree.java[verify-preorder-serialization-of-a-binary-tree]
 * link:{package}/NestedIterator.java[flatten-nested-list-iterator]
 * link:{package}/OneThreeTwoPattern.java[132-pattern]
+* link:{package}/ReverseSubstringsBetweenEachPairofParentheses.java[reverse-substrings-between-each-pair-of-parentheses]
 a|
 * link:{package}/BasicCalculator.java[basic-calculator]
 * link:{package}/VolumeOfHistogramLcci.java[volume-of-histogram-lcci]
