--- a/README.adoc
+++ b/README.adoc
@@ -222,6 +222,7 @@ a|
 * link:{package}/DecodeXoredArray.java[decode-xored-array]
 * link:{package}/XorOperationInAnArray.java[xor-operation-in-an-array]
 * link:{package}/HammingDistance.java[hamming-distance]
+* link:{package}/PowerOfFour.java[power-of-four]
 a|
 * link:{package}/Subsets.java[subsets]
 * link:{package}/NumberOf1Bits.java[number-of-1-bits]
