:sparkles: continuous-subarray-sum

--- a/README.adoc
+++ b/README.adoc
@@ -209,6 +209,7 @@ a|
 * link:{package}/SumOfSquareNumbers.java[sum-of-square-numbers]
 * link:{package}/CountTripletsThatCanFormTwoArraysOfEqualXor.java[count-triplets-that-can-form-two-arrays-of-equal-xor]
 * link:{package}/CanYouEatYourFavoriteCandyOnYourFavoriteDay.java[can-you-eat-your-favorite-candy-on-your-favorite-day]
+* link:{package}/ContinuousSubarraySum.java[continuous-subarray-sum]
 a|
 * link:{package}/BasicCalculator.java[basic-calculator]
 * link:{package}/ChalkboardXORGame.java[chalkboard-xor-game]
