:sparkles: ones-and-zeroes

--- a/README.adoc
+++ b/README.adoc
@@ -420,6 +420,7 @@ a|
 * link:{package}/LargestDivisibleSubset.java[largest-divisible-subset]
 * link:{package}/CombinationSumIV.java[combination-sum-iv]
 * link:{package}/DeleteAndEarn.java[delete-and-earn]
+* link:{package}/OnesAndZeroes.java[ones-and-zeroes]
 a|
 * link:{package}/RegularExpressionMatching.java[regular-expression-matching]
 * link:{package}/BestTimeToBuyAndSellStockIII.java[best-time-to-buy-and-sell-stock-iii]
