--- a/README.adoc
+++ b/README.adoc
@@ -421,6 +421,7 @@ a|
 * link:{package}/CombinationSumIV.java[combination-sum-iv]
 * link:{package}/DeleteAndEarn.java[delete-and-earn]
 * link:{package}/OnesAndZeroes.java[ones-and-zeroes]
+* link:{package}/TargetSum.java[target-sum]
 a|
 * link:{package}/RegularExpressionMatching.java[regular-expression-matching]
 * link:{package}/BestTimeToBuyAndSellStockIII.java[best-time-to-buy-and-sell-stock-iii]
@@ -533,6 +534,7 @@ a|
 * link:{package}/BinaryTreeRightSideView.java[binary-tree-right-side-view]
 * link:{package}/CourseSchedule.java[course-schedule]
 * link:{package}/PathWithMinimumEffort.java[path-with-minimum-effort]
+* link:{package}/TargetSum.java[target-sum]
 a|
 * link:{package}/SortItemsByGroupsRespectingDependencies.java[sort-items-by-groups-respecting-dependencies]
 * link:{package}/SwimInRisingWater.java[swim-in-rising-water]
