:sparkles: profitable-schemes

--- a/README.adoc
+++ b/README.adoc
@@ -437,6 +437,7 @@ a|
 * link:{package}/StrangePrinter.java[strange-printer]
 * link:{package}/MakeTheXorOfAllSegmentsEqualToZero.java[make-the-xor-of-all-segments-equal-to-zero]
 * link:{package}/NumberOfSubmatricesThatSumToTarget.java[number-of-submatrices-that-sum-to-target]
+* link:{package}/ProfitableSchemes.java[profitable-schemes]
 
 | Greedy
 a|
