--- a/README.adoc
+++ b/README.adoc
@@ -423,6 +423,7 @@ a|
 * link:{package}/OnesAndZeroes.java[ones-and-zeroes]
 * link:{package}/TargetSum.java[target-sum]
 * link:{package}/LastStoneWeightII.java[last-stone-weight-ii]
+* link:{package}/CoinChange2.java[coin-change-2]
 a|
 * link:{package}/RegularExpressionMatching.java[regular-expression-matching]
 * link:{package}/BestTimeToBuyAndSellStockIII.java[best-time-to-buy-and-sell-stock-iii]
