--- a/README.adoc
+++ b/README.adoc
@@ -461,6 +461,7 @@ a|
 * link:{package}/Sqrtx.java[sqrtx]
 * link:{package}/ValidPerfectSquare.java[valid-perfect-square]
 * link:{package}/FirstBadVersion.java[first-bad-version]
+* link:{package}/GuessNumberHigherOrLower.java[guess-number-higher-or-lower]
 a|
 * link:{package}/SearchInRotatedSortedArray.java[search-in-rotated-sorted-array]
 * link:{package}/FindFirstAndLastPositionOfElementInSortedArray.java[find-first-and-last-position-of-element-in-sorted-array]
