--- a/README.adoc
+++ b/README.adoc
@@ -462,6 +462,7 @@ a|
 * link:{package}/ValidPerfectSquare.java[valid-perfect-square]
 * link:{package}/FirstBadVersion.java[first-bad-version]
 * link:{package}/GuessNumberHigherOrLower.java[guess-number-higher-or-lower]
+* link:{package}/PeakIndexInAMountainArray.java[peak-index-in-a-mountain-array]
 a|
 * link:{package}/SearchInRotatedSortedArray.java[search-in-rotated-sorted-array]
 * link:{package}/FindFirstAndLastPositionOfElementInSortedArray.java[find-first-and-last-position-of-element-in-sorted-array]
