--- a/README.adoc
+++ b/README.adoc
@@ -426,6 +426,7 @@ a|
 * link:{package}/LastStoneWeightII.java[last-stone-weight-ii]
 * link:{package}/CoinChange2.java[coin-change-2]
 * link:{package}/PerfectSquares.java[perfect-squares]
+* link:{package}/StoneGame.java[stone-game]
 a|
 * link:{package}/RegularExpressionMatching.java[regular-expression-matching]
 * link:{package}/BestTimeToBuyAndSellStockIII.java[best-time-to-buy-and-sell-stock-iii]
