--- a/README.adoc
+++ b/README.adoc
@@ -148,6 +148,7 @@ a|
 * link:{package}/RegularExpressionMatching.java[regular-expression-matching]
 * link:{package}/DistinctSubsequences.java[distinct-subsequences]
 * link:{package}/ScrambleString.java[scramble-string]
+* link:{package}/ValidNumber.java[valid-number]
 
 | LinkedList
 a|
@@ -214,6 +215,7 @@ a|
 a|
 * link:{package}/BasicCalculator.java[basic-calculator]
 * link:{package}/ChalkboardXORGame.java[chalkboard-xor-game]
+* link:{package}/ValidNumber.java[valid-number]
 
 | BitManipulation
 a|
