--- a/README.adoc
+++ b/README.adoc
@@ -216,6 +216,7 @@ a|
 * link:{package}/BasicCalculator.java[basic-calculator]
 * link:{package}/ChalkboardXORGame.java[chalkboard-xor-game]
 * link:{package}/ValidNumber.java[valid-number]
+* link:{package}/MaxPointsOnALine.java[max-points-on-a-line]
 
 | BitManipulation
 a|
@@ -301,6 +302,7 @@ a|
 * link:{package}/ContiguousArray.java[contiguous-array]
 a|
 * link:{package}/NumberOfValidWordsForEachPuzzle.java[number-of-valid-words-for-each-puzzle]
+* link:{package}/MaxPointsOnALine.java[max-points-on-a-line]
 
 | Tree
 a|
