--- a/README.adoc
+++ b/README.adoc
@@ -100,6 +100,7 @@ a|
 * link:{package}/CountTripletsThatCanFormTwoArraysOfEqualXor.java[count-triplets-that-can-form-two-arrays-of-equal-xor]
 * link:{package}/FindKthLargestXorCoordinateValue.java[find-kth-largest-xor-coordinate-value]
 * link:{package}/UncrossedLines.java[uncrossed-lines]
+* link:{package}/OpenTheLock.java[open-the-lock]
 a|
 * link:{package}/MedianOfTwoSortedArrays.java[median-of-two-sorted-arrays]
 * link:{package}/BestTimeToBuyAndSellStockIII.java[best-time-to-buy-and-sell-stock-iii]
@@ -144,6 +145,7 @@ a|
 * link:{package}/LongestPalindromicSubstring.java[longest-palindromic-substring]
 * link:{package}/SmallestStringWithSwaps.java[smallest-string-with-swaps]
 * link:{package}/BasicCalculatorII.java[basic-calculator-ii]
+* link:{package}/OpenTheLock.java[open-the-lock]
 a|
 * link:{package}/RegularExpressionMatching.java[regular-expression-matching]
 * link:{package}/DistinctSubsequences.java[distinct-subsequences]
@@ -300,6 +302,7 @@ a|
 * link:{package}/BrickWall.java[brick-wall]
 * link:{package}/TopKFrequentWords.java[top-k-frequent-words]
 * link:{package}/ContiguousArray.java[contiguous-array]
+* link:{package}/OpenTheLock.java[open-the-lock]
 a|
 * link:{package}/NumberOfValidWordsForEachPuzzle.java[number-of-valid-words-for-each-puzzle]
 * link:{package}/MaxPointsOnALine.java[max-points-on-a-line]
@@ -569,6 +572,7 @@ a|
 * link:{package}/BinaryTreeZigzagLevelOrderTraversal.java[binary-tree-zigzag-level-order-traversal]
 * link:{package}/BinaryTreeRightSideView.java[binary-tree-right-side-view]
 * link:{package}/CourseSchedule.java[course-schedule]
+* link:{package}/OpenTheLock.java[open-the-lock]
 |
 
 | SlidingWindow
