--- a/README.adoc
+++ b/README.adoc
@@ -573,6 +573,7 @@ a|
 * link:{package}/BinaryTreeRightSideView.java[binary-tree-right-side-view]
 * link:{package}/CourseSchedule.java[course-schedule]
 * link:{package}/OpenTheLock.java[open-the-lock]
+* link:{package}/SlidingPuzzle.java[sliding-puzzle]
 |
 
 | SlidingWindow
