:sparkles: chuan-di-xin-xi

--- a/README.adoc
+++ b/README.adoc
@@ -415,6 +415,7 @@ a|
 * link:{package}/BestTimeToBuyAndSellStock.java[best-time-to-buy-and-sell-stock]
 * link:{package}/HouseRobber.java[house-robber]
 * link:{package}/NumArray.java[range-sum-query-immutable]
+* link:{package}/ChuanDiXinXi.java[chuan-di-xin-xi]
 a|
 * link:{package}/UniquePaths.java[unique-paths]
 * link:{package}/UniquePathsII.java[unique-paths-ii]
