--- a/README.adoc
+++ b/README.adoc
@@ -308,6 +308,7 @@ a|
 * link:{package}/ContiguousArray.java[contiguous-array]
 * link:{package}/OpenTheLock.java[open-the-lock]
 * link:{package}/SortCharactersByFrequency.java[sort-characters-by-frequency]
+* link:{package}/DisplayTableOfFoodOrdersInARestaurant.java[display-table-of-food-orders-in-a-restaurant]
 a|
 * link:{package}/NumberOfValidWordsForEachPuzzle.java[number-of-valid-words-for-each-puzzle]
 * link:{package}/MaxPointsOnALine.java[max-points-on-a-line]
